# Gleipnir

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/: ips_config.json
deploy/systemd/: gleipnir-dashboard.service  gleipnir.service
docs/: analisis_juridico.md  analisis_juridico_mexico.md  arquitectura.md  credenciales.md  dashboard.md  dashboard_https_reverse_proxy.md  dashboard_service.md  evidencias_rubrica.md  ips_firewall.md  manual_usuario.md  modelo_osi.md  security.md  systemd_service.md  troubleshooting.md
gleipnir_ids.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  alert_policy.py  blacklist.py  cli.py  config.py  detector.py  dns_http_monitor.py  firewall.py  ips_config.py  logger.py  mailer.py  main.py  maintenance.py  replay.py  reports.py  sniffer.py  status.py  storage.py  threat_intel.py  whitelist.py
src/dashboard/: __init__.py  app.py  auth.py
src/runtime/: __init__.py  engine.py
tests/: test_alert_policy.py  test_blacklist.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_auth.py  test_dashboard_filters.py  test_detector.py  test_dns_http_monitor.py  test_end_to_end_rubric.py  test_firewall.py  test_ips_config.py  test_ips_engine.py  test_live_sniffer.py  test_logger.py  test_mailer.py  test_maintenance.py  test_replay.py  test_reports.py  test_runtime_engine.py  test_sniffer.py  test_status.py  test_storage.py  test_threat_intel.py  test_whitelist.py
tests/fixtures/: offline_packets.hex
